[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/game/ui/main_menu/main_menu.gd" id="1_menu"]
[ext_resource type="PackedScene" path="res://assets/vfx/SmokeEffect.tscn" id="2_smoke"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="SmokeEffect" parent="Background" instance=ExtResource("2_smoke")]
position = Vector2(640, 720)
amount = 50
lifetime = 5.0
preprocess = 5.0
gravity = Vector2(0, -50)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_min = 20.0
scale_amount_max = 50.0
color = Color(0.2, 0.2, 0.2, 0.3)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "TEXTICAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 170.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "A Tactical Idle RPG"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Continue" type="Button" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "CONTINUE"

[node name="NewGame" type="Button" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "NEW GAME"

[node name="Options" type="Button" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "OPTIONS"

[node name="About" type="Button" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "ABOUT"

[node name="Exit" type="Button" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "EXIT"

[node name="VersionLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
text = "v0.1.0 Alpha"
horizontal_alignment = 2

[connection signal="pressed" from="UI/VBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="UI/VBox/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/VBox/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="UI/VBox/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="UI/VBox/Exit" to="." method="_on_exit_pressed"]
